# wolta

./: .gitignore  QUICK-SETUP.md  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_files.py  test_init_version_markers.py  test_manifest.py  test_migration_0_1_0.py  test_migrations.py  test_sections.py  test_snapshot.py  test_upgrade.py  test_version_manager.py
wolta/: __init__.py  cli.py
wolta/commands/: __init__.py  init.py  upgrade.py
wolta/core/: __init__.py  files.py  manifest.py  sections.py  snapshot.py
wolta/generators/: __init__.py  bootstrap.py  structure.py  templates.py
wolta/migrations/: __init__.py  base.py  m_0_1_0.py
wolta/migrations/data_v0_1_0/: INGEST-PROTOCOL.md  claude-agent-instructions.md  source-files.md  template-source-adapter.md
wolta/utils/: __init__.py  validators.py  version_manager.py
